--- a/index.css
+++ b/index.css
@@ -91,7 +91,7 @@ a:hover{
 	color: #96031a;  /*cor do texto*/
 	box-shadow: 0px 0px 0px #000000;  /* borda degrader  (desvio direita, desvio baixo, tamanho da sombra)*/
 	background:url("./img/fundo.png");
-	width: 90%;
+	width: 100%;
 	/* height: 50%; */
 	display: flex;
     align-items: center;
@@ -106,9 +106,6 @@ a:hover{
 
 
 	background-size: 100% 100%;
-
-
-    
     padding-left: 36px;
     padding-top: 5px;
     padding-right: 36px;
@@ -155,7 +152,8 @@ a:hover{
     color: #96031a;  /*cor do texto*/
 	background:url("./img/Forno.jpg");
 	background-repeat: no-repeat;
-	background-size: 100% 500px; 
+    /* background-size: cover; */
+	background-size: 100% 100%; 
     box-shadow: 0px 0px 36px #ffffff;  /* borda degrader  (desvio direita, desvio baixo, tamanho da sombra)*/
     /* border: 1px solid #e6e6e6;   borda entrono do box*/ 
     /* margin: auto; */
@@ -174,6 +172,8 @@ a:hover{
     margin-bottom: calc(2%);  /*margem embaixo*/
     margin-left: calc(1%);  /*margem na esquerda*/
     margin-right: calc(1%);  /*margem na direita*/
+    height: 98%;
+    overflow: hidden
 }
 
 #foot{
@@ -230,6 +230,8 @@ a:hover{
 	grid-auto-flow: column;
 	grid-auto-columns: 1fr;
 	/* background-size: 100% 100% */
+
+    position: relative;
   }
   
 
@@ -240,6 +242,9 @@ a:hover{
 	height: 300px;
 	padding-top: 50px;
 	padding-left: 330px;
+
+    /* position: absolute;
+    left: 30%; */
 	
 }
 
@@ -248,5 +253,5 @@ table, td, tr, th{
 }
 
 #headBotoes{
-    width: 50%;
+    width: 80%;
 }
