--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 ul{
     /* background-color: aquamarine; */
     display: flex; 
@@ -7,25 +6,15 @@ ul{
 	/* distancia entre botões */
     gap: 20px; 
 }
+
 li{
     list-style: none;  /* sem os pontos de listagem*/
 }
-#limenu{
-    /* top: 0;
-    left: 0;
-    right: 0;
-    padding: 8px; */
-    margin-top: calc(10%); /* margem no topo */
-   	margin-bottom: calc(10%);  /*margem embaixo */
-    margin-left: calc(0%);  /*margem na esquerda */
-   	margin-right: calc(0%);  /*margem na direita */
-}
-/* nav{
-	margin-left: calc(10%);
-} */
+
 *{
     font-family: cursive;  /* tipo de fonete de letra*/
 }
+
 a{
     color: #6d676e;  /* cor da letra*/
     background-color: #faa916; /* cor do botao*/
@@ -37,6 +26,7 @@ a{
     /* transition: all .2s; */
     font-weight: 800;  /* tamanho d agonte*/
 }
+
 a:hover{
     box-shadow: 0px 0px 26px #000000;  /* borda do campo selecionado */
     margin-top: calc(10%); /* margem no topo */
@@ -48,7 +38,11 @@ a:hover{
 #ahead{
 	margin-left: calc(10%);  /*margem na esquerda */
 }
-/* */
+
+.html{
+    height: calc(100%);
+    width: calc(100%)
+}
 
 .menuCabecalho{   /*classe*/
     display: flex;
@@ -69,24 +63,6 @@ a:hover{
     margin-right: calc(1%);  /*margem na direita*/
 }
 
-.dadosPessoal{
-    display: flex;
-    align-items: flex-start;
-    gap: 26px;
-    justify-content: space-between;  /* ajusta a posicao no espaço*/
-    background-color: #1b1b1e;  /* cor do fundo da tela*/
-    box-shadow: 36px 0px 0px #fbfffe;  /* borda degrader  (desvio direita, desvio baixo, tamanho da sombra)*/
-    /* position: relative; */
-    top: 10px;
-    left: 0;
-    right: 0;
-    /* padding: 8px; */
-    margin-top: calc(1%); /* margem no topo */
-    margin-bottom: calc(0,5%);  /*margem embaixo*/
-    margin-left: calc(0,5%);  /*margem na esquerda*/
-    margin-right: calc(0,5%);  /*margem na direita*/
-}
-
 #head{
 	color: #96031a;  /*cor do texto*/
 	box-shadow: 0px 0px 0px #000000;  /* borda degrader  (desvio direita, desvio baixo, tamanho da sombra)*/
@@ -96,15 +72,9 @@ a:hover{
 	display: flex;
     align-items: center;
 	gap: 6px;
-
 	/* justify-content: flex-start; */
-
 	justify-content: space-between; 
-    
-	
 	/* background-repeat: no-repeat; */
-
-
 	background-size: 100% 100%;
     padding-left: 36px;
     padding-top: 5px;
@@ -125,11 +95,8 @@ a:hover{
 	display: flex;
 	align-items: center;
 	gap: 6px;
-
 	justify-content: space-between; 
-
 	background-size: 100% 100%;
-    
     /* border: 1px solid #e6e6e6;   borda entrono do box*/ 
     /* margin: auto; */
     /* display: 0px;  borda superior e inferior */
@@ -145,10 +112,22 @@ a:hover{
     margin-bottom: calc(2%);  /*margem embaixo*/
     margin-left: calc(6%);  /*margem na esquerda*/
     margin-right: calc(1%);  /*margem na direita*/
+    overflow: hidden
+}
+
+#limenu{
+    /* top: 0;
+    left: 0;
+    right: 0;
+    padding: 8px; */
+    margin-top: calc(10%); /* margem no topo */
+   	margin-bottom: calc(10%);  /*margem embaixo */
+    margin-left: calc(0%);  /*margem na esquerda */
+   	margin-right: calc(0%);  /*margem na direita */
 }
 
 #home{
-	width: 10%;
+	/* width: 10%; */
     color: #96031a;  /*cor do texto*/
 	background:url("./img/Forno.jpg");
 	background-repeat: no-repeat;
@@ -172,10 +151,47 @@ a:hover{
     margin-bottom: calc(2%);  /*margem embaixo*/
     margin-left: calc(1%);  /*margem na esquerda*/
     margin-right: calc(1%);  /*margem na direita*/
-    height: 98%;
+    /* height: 98%; */
     overflow: hidden
 }
 
+.pizza{
+	/* margin-top: 5px; */
+	/* margin-bottom: 60px; */
+	width: 500px;
+	height: 300px;
+	padding-top: 50px;
+	padding-left: 330px;
+    /* position: absolute;
+    left: 30%; */
+}
+
+/* animação */
+.slide-controller:nth-child(1):checked ~ .slide-show .slides-list{--selected-item: 0;}
+.slide-controller:nth-child(2):checked ~ .slide-show .slides-list{--selected-item: 1;}
+.slide-controller:nth-child(3):checked ~ .slide-show .slides-list{--selected-item: 2;}
+.slide-controller:nth-child(4):checked ~ .slide-show .slides-list{--selected-item: 3;}
+.slide-controller:nth-child(5):checked ~ .slide-show .slides-list{--selected-item: 4;}
+.slide-controller:nth-child(6):checked ~ .slide-show .slides-list{--selected-item: 5;}
+.slide-show{overflow: hidden;}
+.slides-list{
+	--selected-item: 0;
+	--total-items: 4;
+	list-style-type: none;
+	margin: 100px 0;
+	padding: 0;
+	position: relative;
+	left: calc(var(--selected-item) * -66.6%);
+	width: calc(var(--total-items) * 100%);
+	height: calc(var(--total-items) * 60px);  
+	transition: left 2.4s cubic-bezier(0.680, -0.550, 0.265, 1.550);
+	display: grid;
+	grid-auto-flow: column;
+	grid-auto-columns: 1fr;
+	/* background-size: 100% 100% */
+    position: relative;
+}
+  
 #foot{
 	width: 96%;
     color: #96031a;  /*cor do texto*/
@@ -190,7 +206,6 @@ a:hover{
 	/* background-repeat: no-repeat; */
 	background-size: 100% 100%;
     box-shadow: 0px 0px 36px #000000;  /* borda degrader  (desvio direita, desvio baixo, tamanho da sombra)*/
-
     padding-left: 5px;
     padding-top: 1px;
     padding-right: 36px;
@@ -201,51 +216,6 @@ a:hover{
     margin-bottom: calc(0%);  /*margem embaixo*/
     margin-left: calc(1%);  /*margem na esquerda*/
     margin-right: calc(1%);  /*margem na direita*/
-}
-
-
-/* animação */
-  .slide-controller:nth-child(1):checked ~ .slide-show .slides-list{--selected-item: 0;}
-  .slide-controller:nth-child(2):checked ~ .slide-show .slides-list{--selected-item: 1;}
-  .slide-controller:nth-child(3):checked ~ .slide-show .slides-list{--selected-item: 2;}
-  .slide-controller:nth-child(4):checked ~ .slide-show .slides-list{--selected-item: 3;}
-  .slide-controller:nth-child(5):checked ~ .slide-show .slides-list{--selected-item: 4;}
-  .slide-controller:nth-child(6):checked ~ .slide-show .slides-list{--selected-item: 5;}
-  .slide-show{
-	overflow: hidden;
-  }
-  .slides-list{
-	--selected-item: 0;
-	--total-items: 4;
-	list-style-type: none;
-	margin: 100px 0;
-	padding: 0;
-	position: relative;
-	left: calc(var(--selected-item) * -66.6%);
-	width: calc(var(--total-items) * 100%);
-	height: calc(var(--total-items) * 60px);  
-	transition: left 2.4s cubic-bezier(0.680, -0.550, 0.265, 1.550);
-	
-	display: grid;
-	grid-auto-flow: column;
-	grid-auto-columns: 1fr;
-	/* background-size: 100% 100% */
-
-    position: relative;
-  }
-  
-
-#pizza{
-	/* margin-top: 5px; */
-	/* margin-bottom: 60px; */
-	width: 500px;
-	height: 300px;
-	padding-top: 50px;
-	padding-left: 330px;
-
-    /* position: absolute;
-    left: 30%; */
-	
 }
 
 table, td, tr, th{
